<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/d_gesturetutorial_bg" >

    <Button
        android:id="@+id/closeButton"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="13dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/gestures_title"
            android:textColor="?header_title"
            android:textSize="22sp"
            android:typeface="sans" />

        <LinearLayout
            android:id="@+id/longPressLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/longPressIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/d_gesturetutorial_longpress" />

                <TextView
                    android:id="@+id/longPress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gestures_longtap"
                    android:textColor="?header_title"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/longPressEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_longtap_event"
                    android:textColor="?grid_plates"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/swipeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/swipeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/d_gesturetutorial_swipe" />

                <TextView
                    android:id="@+id/swipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gestures_swipe"
                    android:textColor="?header_title"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/swipeEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gestures_swipe_event"
                    android:textColor="?grid_plates"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/roofLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/roofIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/d_gesturetutorial_dach" />

                <TextView
                    android:id="@+id/roof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gestures_roof"
                    android:textColor="?header_title"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/roofEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_roof_event"
                    android:textColor="?grid_plates"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tapLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/tapIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/d_gesturetutorial_tap" />

                <TextView
                    android:id="@+id/tap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gestures_tap"
                    android:textColor="?header_title"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tapEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_event"
                    android:textColor="?grid_plates"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/circleLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/circleIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/d_gesturetutorial_kreis" />

                <TextView
                    android:id="@+id/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gestures_circle"
                    android:textColor="?header_title"
                    android:textSize="16sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/circleEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_circle_event"
                    android:textColor="?grid_plates"
                    android:textSize="16sp"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>