<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?background" >

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="18dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5"
            android:background="?cldButton"
            android:drawableLeft="?icon_arrowleft"
            android:drawablePadding="-3dp"
            android:paddingLeft="12dp"
            android:paddingRight="7dp"
            android:text="@string/tutorial_back"
            android:textColor="?header_title"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.5"
            android:background="?cldButton"
            android:drawablePadding="-3dp"
            android:drawableRight="?icon_arrowright"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            android:text="@string/tutorial_start"
            android:textColor="?header_title"
            android:textSize="18sp"
            android:typeface="sans" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/dont_show_again_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:button="?cldCheckBox"
        android:text="@string/tutorial_show_again" />

    <View
        android:id="@+id/ruler1"
        android:layout_width="fill_parent"
        android:layout_height="0.67dp"
        android:layout_above="@id/dont_show_again_checkbox"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ruler1"
        android:layout_centerHorizontal="true"
        android:paddingBottom="27dp"
        android:paddingLeft="18dp"
        android:paddingRight="15dp"
        android:paddingTop="32dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tutorial_text_tts2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="left"
                android:lineSpacingExtra="4.67dp"
                android:text="@string/tutorial_tts"
                android:textSize="14.67dp"
                android:textStyle="normal"
                android:typeface="sans" />

            <Button
                android:id="@+id/market_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?cldDlButton"
                android:drawableLeft="?cldDlIcon"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="19dp"
                android:paddingRight="19dp"
                android:paddingTop="8dp"
                android:text="@string/tutorial_download"
                android:textColor="?news_listtext"
                android:textSize="17sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/tutorial_text_tts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="left"
                android:lineSpacingExtra="4.67dp"
                android:text="@string/tutorial_tts2"
                android:textSize="14.67dp"
                android:textStyle="normal"
                android:typeface="sans" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>