<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?background" >

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="18dp" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5"
            android:background="?cldButton"
            android:drawableLeft="?icon_arrowleft"
            android:drawablePadding="-3dp"
            android:paddingLeft="12dp"
            android:paddingRight="7dp"
            android:text="@string/tutorial_back"
            android:textColor="?header_title"
            android:textSize="18sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.5"
            android:background="?cldButton"
            android:drawablePadding="-3dp"
            android:drawableRight="?icon_arrowright"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            android:text="@string/tutorial_continue"
            android:textColor="?header_title"
            android:textSize="18sp"
            android:typeface="sans" />
    </LinearLayout>

    <View
        android:id="@+id/ruler2"
        android:layout_width="fill_parent"
        android:layout_height="0.67dp"
        android:layout_above="@id/buttonsLayout"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ruler2"
        android:layout_centerHorizontal="true"
        android:paddingBottom="24dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="8.67dp" >

        <TextView
            android:id="@+id/tutorial_text_stvo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:lineSpacingExtra="4.67dp"
            android:text="@string/tutorial_stvo"
            android:textSize="14.67dp"
            android:textStyle="normal"
            android:typeface="sans" />
    </ScrollView>

</RelativeLayout>