<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?background"
    android:paddingTop="5dp" >

    <RelativeLayout
        android:id="@+id/recepientLayout"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="0.67dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <Button
            android:id="@+id/chooseContactButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_input_get" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="?background"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/sms_detail_to"
            android:textColor="?list_time"
            android:typeface="sans" />

        <EditText
            android:id="@+id/recepientEditText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/chooseContactButton"
            android:layout_toRightOf="@+id/textView1"
            android:background="?background"
            android:hint="@string/sms_detail_recipient"
            android:inputType="textPhonetic"
            android:textColor="?header_title"
            android:textSize="16sp"
            android:typeface="sans" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/smsButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/smsSendButtonLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="?detail_composeLeftButton"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="11dp" >

            <ImageView
                android:layout_width="21.3dp"
                android:layout_height="21.3dp"
                android:src="@drawable/d_sms_send" />

            <TextView
                android:id="@+id/smsSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9.3dp"
                android:background="@android:color/transparent"
                android:text="@string/sms_detail_send"
                android:textColor="?header_title"
                android:textSize="16sp"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/smsCancelButtonLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="?detail_composeRightButton"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="11dp" >

            <ImageView
                android:layout_width="21.3dp"
                android:layout_height="21.3dp"
                android:src="@drawable/d_sms_discard_plain" />

            <TextView
                android:id="@+id/smsCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9.3dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:text="@string/sms_detail_cancel"
                android:textColor="?header_title"
                android:textSize="16sp"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/smsContentEditText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/smsButtonBar"
        android:layout_below="@id/recepientLayout"
        android:layout_marginTop="8dp"
        android:background="?background"
        android:gravity="top"
        android:hint="@string/sms_detail_content"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="?header_title"
        android:textSize="16sp"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.67dp"
        android:layout_below="@id/recepientLayout"
        android:background="?separator" >
    </LinearLayout>

</RelativeLayout>